testing/tests/ui/unexpected-tag.stderr
error: node `end` was not expected in the current context
 --> <source attribute>:1:2
       " end %}"
 --> tests/ui/unexpected-tag.rs:5:1
  |
5 | /// ```rinja
  | ^^^^^^^^^^^^

error: node `elif` was not expected in the current context: `for` block
 --> <source attribute>:3:2
       " elif %}\n    what?\n{% endfor %}"
  --> tests/ui/unexpected-tag.rs:12:1
   |
12 | /// ```rinja
   | ^^^^^^^^^^^^

error: node `else` was not expected in the current context: `block` block
 --> <source attribute>:3:2
       " else %}\n    else\n{% endblock meta %}"
  --> tests/ui/unexpected-tag.rs:23:1
   |
23 | /// ```rinja
   | ^^^^^^^^^^^^

error: node `when` was not expected in the current context
 --> <source attribute>:1:2
       " when condition %}\n    true\n{% endwhen %}"
  --> tests/ui/unexpected-tag.rs:34:1
   |
34 | /// ```rinja
   | ^^^^^^^^^^^^

error: unexpected closing tag `endlet`
 --> <source attribute>:1:20
       " endlet %}"
  --> tests/ui/unexpected-tag.rs:43:1
   |
43 | /// ```rinja
   | ^^^^^^^^^^^^

error: unknown node `syntax`
 --> <source attribute>:1:2
       " syntax error %}"
  --> tests/ui/unexpected-tag.rs:50:1
   |
50 | /// ```rinja
   | ^^^^^^^^^^^^
